2003-04-13  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Support for members-only
	conferences, invitations.  Bugfix in affiliation change processing

	* src/jlib.hrl: Added jabber:x:conference namespace definition

2003-04-07  Alexey Shchepin  <alexey@sevcom.net>

	* src/jlib.hrl: Added jaber:iq:auth:error namespace and
	appropriate errors
	* src/ejabberd_c2s.erl: Use auth:error in appropriate places

	* src/jlib.hrl: Changed stream error and stanza error namespace
	names due to last XMPP Core changes

2003-03-28  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/mod_muc_room.erl: Added support for grant/revoke
	administrative/owner priveledges, fixed work with affiliations

2003-03-27  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd.cfg: Updated

	* src/mod_muc/mod_muc_room.erl: Support for service admin,
	kick/ban reasons, more options

	* src/msgs/ru.msg: Added translations for MUC messages

	* src/ejabberd_s2s_in.erl: Bugfix

	* src/mod_muc/: Small fixes in discovering

2003-03-26  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/: Support for discovering service and more
	configuration options

2003-03-25  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/: Support for more configuration options and
	persistent rooms

2003-03-23  Alexey Shchepin  <alexey@sevcom.net>

	* src/mod_muc/: MUC support (not completed yet)

2003-03-15  Alexey Shchepin  <alexey@sevcom.net>

	* src/xml_stream.erl: Removed "link" which cause not improper
	closing of xml connections

2003-03-14  Alexey Shchepin  <alexey@sevcom.net>

	* src/jlib.hrl: Added "invalid-namespace" error
	* src/ejabberd_c2s.erl: Likewise

2003-03-12  Alexey Shchepin  <alexey@sevcom.net>

	* src/ejabberd_s2s_out.erl: Fixed ports leak
	* src/ejabberd_listener.erl: Likewise

	* src/ejabberd_c2s.erl: Fixes for SASL support

	* src/cyrsasl.erl: Fixes

	* src/cyrsasl_digest.erl: DIGEST-MD5 SASL mechanism support

2003-03-09  Alexey Shchepin  <alexey@sevcom.net>
