@@ -1,3 +1,7 @@
+2003-04-15  Alexey Shchepin  <alexey@sevcom.net>
+
+	* src/ejabberd_c2s.erl: Some fixes in work with socket
+
 2003-04-13  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/mod_muc/mod_muc_room.erl: Support for members-only
